fix button spinner opacity on ios

--- a/assets/styles/components/_button.scss
+++ b/assets/styles/components/_button.scss
@@ -16,7 +16,7 @@
   -ms-user-select: none;
   user-select: none;
   background-image: none;
-  border: 1px solid transparent;
+  // border: 1px solid transparent;
   border-radius: 8px;
 
   &--px2py1 {
